#
#  Top level Makefile for libjade
#
#  Copyright 2010 MCN Technologies Inc.. All rights reserved.
#

libjdnet_la_SOURCES = \
	JdDrbRtspClnt.cpp	\
	JdDrbRtspSrv.cpp \
	JdDtcpRcv.cpp 	 \
	JdDtcpSnd.cpp 	 \
	JdHttpClnt.cpp	\
	JdHttpParser.cpp \
	JdHttpSrv.cpp	\
	JdHttpLiveSgmt.cpp \
	JdNetUtil.cpp 	 \
	JdRfc2250.cpp 	 \
	JdRtp.cpp 	 \
	JdRtpRcv.cpp \
	JdRtpSnd.cpp \
	JdRtspClnt.cpp 	 \
	JdRtspSrv.cpp 	 \
	JdSock.cpp \
	JdStun.cpp

include_HEADERS = \
	../include/JdHttpClnt.h \
	../include/JdRfc2250.h 	 \
	../include/JdRtp.h 	 \
	../include/JdDtcpRcv.h 	 \
	../include/JdDtcpSnd.h \
	../include/JdRtsp.h \
	../include/JdRtspClnt.h  \
	../include/JdSdp.h  \
	../include/JdRtspSrv.h \
	../include/JdHttpSrv.h \
	../include/JdStrmSched.h \
	../include/JdNetUtil.h \
	../include/JdDrbRtspClnt.h \
	../include/JdDrbRtspSrv.h \
	../include/JdHttpLiveSgmt.h \
	../include/TsParse.h \
	../include/JdSock.h \
	../include/JdStun.h

