#
#  Copyright 2011 MCN Technologies Inc.. All rights reserved.
#
#add_executable(TestRtp TestRtp.cpp)
#target_link_libraries(TestRtp jdnet)
#add_executable(TestRtsSrv TestRtsSrv.cpp)
#target_link_libraries(TestRtsSrv jdnet)
#add_executable(TestSun TestSun.cpp)
#target_link_libraries(TestSun jdnet)
#install(TARGETS TestRtp TestRtsSrv TestSun DESTINATION tests)

